# analysis_data

./: .pre-commit-config.yaml  README.md  database.py  lab_2.docx  main.py  pyproject.toml  settings.py
6_lab/: scikit.py
ab_testing/: ab_testing.py  demo.ipynb  lab_1.ipynb
genetic_deap/: algorythm.py
mapper/: scripts.py  ФСД дз4 - Лист1.csv  ФСД дз4 - Лист2.csv  ФСД дз4 - Лист3.csv
report/: models.py  report_call.xlsx  report_service.py
report/routers/: __init__.py  routers.py
templates/: home.html
