[tool.poetry]
name = "analysis-data"
version = "0.1.0"
description = ""
authors = ["Kirill Kartashov  <78963080+kirillcresh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
pre-commit = "^3.6.1"
matplotlib = "^3.8.2"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
