[tool.poetry]
name = "analysis-data"
version = "0.1.0"
description = ""
authors = ["Kirill Kartashov  <78963080+kirillcresh@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.0"
pre-commit = "^3.6.1"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.27"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
psycopg2 = "^2.9.9"
jinja2 = "^3.1.3"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
